Update some examples

--- a/examples/notebooks/GPT4vsLlama2.ipynb
+++ b/examples/notebooks/GPT4vsLlama2.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0a13ddc8",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "780dc3bf",
    "metadata": {},
@@ -21,7 +19,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "623f0cfe",
    "metadata": {},
@@ -30,7 +27,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "52881369",
    "metadata": {},
@@ -49,7 +45,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -58,7 +53,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
@@ -74,12 +68,11 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"\"\n",
+    "os.environ['DEBUG'] = \"1\"\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -102,7 +95,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -111,7 +103,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0cd0bae8",
    "metadata": {},
@@ -159,7 +150,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -193,7 +183,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6c3162e6",
    "metadata": {},
@@ -275,7 +264,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2ceb662a",
    "metadata": {},
@@ -315,7 +303,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
@@ -570,7 +557,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "36fa7a07",
    "metadata": {},
