--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4d8e180d",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "08def965",
    "metadata": {},
@@ -20,16 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b8821b4d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet --force-reinstall prompttools"
+    "# !pip install --quiet --force-reinstall prompttools"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7d598292",
    "metadata": {},
@@ -38,7 +35,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d899afc2",
    "metadata": {},
@@ -48,18 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "623cdd9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ['DEBUG'] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -69,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dadc080f",
    "metadata": {},
    "outputs": [],
@@ -79,7 +74,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -88,7 +82,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -98,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0d878c64",
    "metadata": {},
    "outputs": [],
@@ -108,7 +101,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "273e9908",
    "metadata": {},
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8f16f1e7",
    "metadata": {},
    "outputs": [],
@@ -127,7 +119,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f3fa5450",
    "metadata": {},
@@ -137,17 +128,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "866009ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Answer the following question: Who was the first president?</td>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <td>0.000004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Answer the following question: Who was the first president of India?</td>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <td>0.000003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Respond the following query: Who was the first president?</td>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Respond the following query: Who was the first president of India?</td>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <td>0.000002</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                 prompt  \\\n",
+       "0  Answer the following question: Who was the first president?            \n",
+       "1  Answer the following question: Who was the first president of India?   \n",
+       "2  Respond the following query: Who was the first president?              \n",
+       "3  Respond the following query: Who was the first president of India?     \n",
+       "\n",
+       "               response(s)   latency  \n",
+       "0  [\\n\\nGeorge Washington]  0.000004  \n",
+       "1  [\\n\\nGeorge Washington]  0.000003  \n",
+       "2  [\\n\\nGeorge Washington]  0.000002  \n",
+       "3  [\\n\\nGeorge Washington]  0.000002  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.run()\n",
     "harness.visualize()"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "be9c5ef5",
    "metadata": {},
@@ -157,18 +220,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "395c5710",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>prompt_template</th>\n",
+       "      <th>Answer the following question: {{input}}</th>\n",
+       "      <th>Respond the following query: {{input}}</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>user_input</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'Who was the first president of India?'}</th>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>{'input': 'Who was the first president?'}</th>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "prompt_template                                    Answer the following question: {{input}}  \\\n",
+       "user_input                                                                                    \n",
+       "{'input': 'Who was the first president of India?'}  [\\n\\nGeorge Washington]                   \n",
+       "{'input': 'Who was the first president?'}           [\\n\\nGeorge Washington]                   \n",
+       "\n",
+       "prompt_template                                    Respond the following query: {{input}}  \n",
+       "user_input                                                                                 \n",
+       "{'input': 'Who was the first president of India?'}  [\\n\\nGeorge Washington]                \n",
+       "{'input': 'Who was the first president?'}           [\\n\\nGeorge Washington]                "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.visualize(pivot=True)"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b1abc866",
    "metadata": {},
@@ -177,7 +300,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "45a9900e",
    "metadata": {},
@@ -187,20 +309,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c3defecd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4252815e62a64ae19e4dd3421fed8231",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GridBox(children=(Label(value='prompt_template'), Label(value='user_input'), Label(value='response(s)'), Label…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.gather_feedback()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cbc46550",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>feedback</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Answer the following question: Who was the first president?</td>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Answer the following question: Who was the first president of India?</td>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Respond the following query: Who was the first president?</td>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Respond the following query: Who was the first president of India?</td>\n",
+       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                 prompt  \\\n",
+       "0  Answer the following question: Who was the first president?            \n",
+       "1  Answer the following question: Who was the first president of India?   \n",
+       "2  Respond the following query: Who was the first president?              \n",
+       "3  Respond the following query: Who was the first president of India?     \n",
+       "\n",
+       "               response(s)   latency  feedback  \n",
+       "0  [\\n\\nGeorge Washington]  0.000004  1         \n",
+       "1  [\\n\\nGeorge Washington]  0.000003  1         \n",
+       "2  [\\n\\nGeorge Washington]  0.000002  1         \n",
+       "3  [\\n\\nGeorge Washington]  0.000002  1         "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "harness.visualize()"
    ]
