--- a/examples/notebooks/OpenAIChatExperiment.ipynb
+++ b/examples/notebooks/OpenAIChatExperiment.ipynb
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "885dabeb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet --force-reinstall prompttools"
+    "# !pip install --quiet --force-reinstall prompttools"
    ]
   },
   {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ed4e635e",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "beaa70a1",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9114cfbf",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "83b33130",
    "metadata": {},
    "outputs": [],
@@ -142,32 +142,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8ddbb951",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import similarity\n",
-    "\n",
-    "\n",
-    "EXPECTED = {\"Who was the first president?\": \"George W\"}\n",
-    "\n",
-    "def extract_responses(output) -> str:\n",
-    "    return [choice[\"message\"][\"content\"] for choice in output[\"choices\"]]\n",
-    "\n",
-    "\n",
-    "def measure_similarity(\n",
-    "    messages: List[Dict[str, str]], results: Dict, metadata: Dict\n",
-    ") -> float:\n",
-    "    \"\"\"\n",
-    "    A simple test that checks semantic similarity between the user input\n",
-    "    and the model's text responses.\n",
-    "    \"\"\"\n",
-    "    distances = [\n",
-    "        similarity.compute(EXPECTED[messages[1][\"content\"]], response)\n",
-    "        for response in extract_responses(results)\n",
-    "    ]\n",
-    "    return min(distances)"
+    "from prompttools.utils import similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e80dfeec",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "experiment.evaluate(\"similar_to_expected\", similarity.evaluate, expected=\"George Washington\")"
    ]
   },
   {
@@ -175,29 +167,111 @@
    "id": "974d6065",
    "metadata": {},
    "source": [
-    "Finally, we can evaluate and visualize the results."
+    "Finally, we can visualize the results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e80dfeec",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "experiment.evaluate(\"similar_to_expected\", measure_similarity)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4d09c18e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>messages</th>\n",
+       "      <th>response(s)</th>\n",
+       "      <th>latency</th>\n",
+       "      <th>similar_to_expected</th>\n",
+       "      <th>model</th>\n",
+       "      <th>temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
+       "      <td>[George Washington]</td>\n",
+       "      <td>0.000025</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>gpt-3.5-turbo</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
+       "      <td>[George Washington]</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>gpt-3.5-turbo</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
+       "      <td>[George Washington]</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>gpt-3.5-turbo-0613</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]</td>\n",
+       "      <td>[George Washington]</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>gpt-3.5-turbo-0613</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                                       messages  \\\n",
+       "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
+       "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
+       "2  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
+       "3  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who was the first president?'}]   \n",
+       "\n",
+       "           response(s)   latency  similar_to_expected               model  \\\n",
+       "0  [George Washington]  0.000025  0.0                  gpt-3.5-turbo        \n",
+       "1  [George Washington]  0.000003  0.0                  gpt-3.5-turbo        \n",
+       "2  [George Washington]  0.000003  0.0                  gpt-3.5-turbo-0613   \n",
+       "3  [George Washington]  0.000002  0.0                  gpt-3.5-turbo-0613   \n",
+       "\n",
+       "   temperature  \n",
+       "0  0.0          \n",
+       "1  1.0          \n",
+       "2  0.0          \n",
+       "3  1.0          "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "experiment.visualize()"
    ]
