--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -44,13 +44,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "623cdd9c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"1\"  # Set to \"1\" if you want to use debug mode.\n",
+    "os.environ['DEBUG'] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
@@ -96,8 +96,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_templates = [\"Answer the following question: {{input}}\", \"Respond the following query: {{input}}\"]\n",
-    "user_inputs = [{\"input\": \"Who was the first president?\"}, {\"input\": \"Who was the first president of India?\"}]"
+    "prompt_templates = [\"\"\"\n",
+    "INSTRUCTIONS\n",
+    "Answer the following question\n",
+    "\n",
+    "QUESTION\n",
+    "{{input}}\n",
+    "\n",
+    "ANSWER\n",
+    "\"\"\", \n",
+    "\"\"\"\n",
+    "INSTRUCTIONS\n",
+    "Answer the following question. \n",
+    "If it is not prime, give its decomposition\n",
+    "\n",
+    "QUESTION\n",
+    "{{input}}\n",
+    "\n",
+    "ANSWER\n",
+    "\"\"\"]\n",
+    "user_inputs = [{\"input\": \"is 17077 a prime number\"}, {\"input\": \"Is 17077 prime?\"}]"
    ]
   },
   {
@@ -161,44 +179,44 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Answer the following question: Who was the first president?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>1.280017</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Answer the following question: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000003</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>0.617383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Respond the following query: Who was the first president?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is equal to]</td>\n",
+       "      <td>1.189366</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Respond the following query: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not prime. Its prime factorization is 131]</td>\n",
+       "      <td>0.649805</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                                 prompt  \\\n",
-       "0  Answer the following question: Who was the first president?            \n",
-       "1  Answer the following question: Who was the first president of India?   \n",
-       "2  Respond the following query: Who was the first president?              \n",
-       "3  Respond the following query: Who was the first president of India?     \n",
+       "                                                                                                                                       prompt  \\\n",
+       "0  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER                                                 \n",
+       "1  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER                                                         \n",
+       "2  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER   \n",
+       "3  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER           \n",
        "\n",
-       "               response(s)   latency  \n",
-       "0  [\\n\\nGeorge Washington]  0.000004  \n",
-       "1  [\\n\\nGeorge Washington]  0.000003  \n",
-       "2  [\\n\\nGeorge Washington]  0.000002  \n",
-       "3  [\\n\\nGeorge Washington]  0.000002  "
+       "                                                  response(s)   latency  \n",
+       "0  [\\nNo, 17077 is not a prime number. It is divisible]        1.280017  \n",
+       "1  [\\nNo, 17077 is not a prime number. It is divisible]        0.617383  \n",
+       "2  [\\nNo, 17077 is not a prime number. It is equal to]         1.189366  \n",
+       "3  [\\nNo, 17077 is not prime. Its prime factorization is 131]  0.649805  "
       ]
      },
      "metadata": {},
@@ -247,8 +265,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>prompt_template</th>\n",
-       "      <th>Answer the following question: {{input}}</th>\n",
-       "      <th>Respond the following query: {{input}}</th>\n",
+       "      <th>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n</th>\n",
+       "      <th>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>user_input</th>\n",
@@ -258,29 +276,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>{'input': 'Who was the first president of India?'}</th>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <th>{'input': 'Is 17077 prime?'}</th>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>[\\nNo, 17077 is not prime. Its prime factorization is 131]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>{'input': 'Who was the first president?'}</th>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
+       "      <th>{'input': 'is 17077 a prime number'}</th>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is equal to]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "prompt_template                                    Answer the following question: {{input}}  \\\n",
-       "user_input                                                                                    \n",
-       "{'input': 'Who was the first president of India?'}  [\\n\\nGeorge Washington]                   \n",
-       "{'input': 'Who was the first president?'}           [\\n\\nGeorge Washington]                   \n",
+       "prompt_template                      \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n  \\\n",
+       "user_input                                                                                                              \n",
+       "{'input': 'Is 17077 prime?'}          [\\nNo, 17077 is not a prime number. It is divisible]                              \n",
+       "{'input': 'is 17077 a prime number'}  [\\nNo, 17077 is not a prime number. It is divisible]                              \n",
        "\n",
-       "prompt_template                                    Respond the following query: {{input}}  \n",
-       "user_input                                                                                 \n",
-       "{'input': 'Who was the first president of India?'}  [\\n\\nGeorge Washington]                \n",
-       "{'input': 'Who was the first president?'}           [\\n\\nGeorge Washington]                "
+       "prompt_template                      \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\n{{input}}\\n\\nANSWER\\n  \n",
+       "user_input                                                                                                                                                           \n",
+       "{'input': 'Is 17077 prime?'}          [\\nNo, 17077 is not prime. Its prime factorization is 131]                                                                     \n",
+       "{'input': 'is 17077 a prime number'}  [\\nNo, 17077 is not a prime number. It is equal to]                                                                            "
       ]
      },
      "metadata": {},
@@ -316,7 +334,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4252815e62a64ae19e4dd3421fed8231",
+       "model_id": "6d3dda7dd0874046b05279a9418603bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -368,30 +386,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Answer the following question: Who was the first president?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>1.280017</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Answer the following question: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000003</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is divisible]</td>\n",
+       "      <td>0.617383</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Respond the following query: Who was the first president?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not a prime number. It is equal to]</td>\n",
+       "      <td>1.189366</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Respond the following query: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nGeorge Washington]</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>\\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER</td>\n",
+       "      <td>[\\nNo, 17077 is not prime. Its prime factorization is 131]</td>\n",
+       "      <td>0.649805</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -399,17 +417,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                 prompt  \\\n",
-       "0  Answer the following question: Who was the first president?            \n",
-       "1  Answer the following question: Who was the first president of India?   \n",
-       "2  Respond the following query: Who was the first president?              \n",
-       "3  Respond the following query: Who was the first president of India?     \n",
+       "                                                                                                                                       prompt  \\\n",
+       "0  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER                                                 \n",
+       "1  \\nINSTRUCTIONS\\nAnswer the following question\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER                                                         \n",
+       "2  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nis 17077 a prime number\\n\\nANSWER   \n",
+       "3  \\nINSTRUCTIONS\\nAnswer the following question. \\nIf it is not prime, give its decomposition\\n\\nQUESTION\\nIs 17077 prime?\\n\\nANSWER           \n",
        "\n",
-       "               response(s)   latency  feedback  \n",
-       "0  [\\n\\nGeorge Washington]  0.000004  1         \n",
-       "1  [\\n\\nGeorge Washington]  0.000003  1         \n",
-       "2  [\\n\\nGeorge Washington]  0.000002  1         \n",
-       "3  [\\n\\nGeorge Washington]  0.000002  1         "
+       "                                                  response(s)   latency  \\\n",
+       "0  [\\nNo, 17077 is not a prime number. It is divisible]        1.280017   \n",
+       "1  [\\nNo, 17077 is not a prime number. It is divisible]        0.617383   \n",
+       "2  [\\nNo, 17077 is not a prime number. It is equal to]         1.189366   \n",
+       "3  [\\nNo, 17077 is not prime. Its prime factorization is 131]  0.649805   \n",
+       "\n",
+       "   feedback  \n",
+       "0  1         \n",
+       "1  1         \n",
+       "2  1         \n",
+       "3  1         "
       ]
      },
      "metadata": {},
